--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Quizing Quiz</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/style.css">
     </head>
-    <body></body>
+    <body>
+        <div id="quiz"></div>
+        <button id="submit answer">Submit Answer</button>
+        <button id="next question">Next Question</button>
+        <button id="submit">Submit Quiz</button>
+        <div id="results"></div>
+
+    </body>
         
         <script src="assets/script.js"></script>
     </body>
