--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Quizing Quiz</title>
+        <title>Quizing Rise Against</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/style.css">
     </head>
     <body>
+        <div>
+            <h1>Rise Against Trivia</h1>
+            <p>How well do you know the Chicago Punk Band?</p>
+            <button>Start Quiz</button>
+        </div>
         <div id="quiz"></div>
         <button id="submit answer">Submit Answer</button>
         <button id="next question">Next Question</button>
